fixed the nav bar and add z-index

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
 #nav-bar {
   position: fixed;
   top: 0;
+  z-index: 9;
 }
 
 body p {
